* add google analytics

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="[非公式]Ingressミッションのメダルを誰でもかんたんに作成 / (Unofficial)Easily create a Ingress Mission Medal anyone" />
     <meta property="og:image" content="http://mission-icon-generator.ingress.tools/img/ingress-mission-icon-generator.png" />
     <meta property="og:url" content="http://mission-icon-generator.ingress.tools/" />
-    <meta property="og:site_name" content="Ingress Mission Icon Generator"/>
+    <meta property="og:site_name" content="Ingress Tools"/>
     <meta content="summary" name="twitter:card" />
     <meta content="@noriaki" name="twitter:site" />
   </head>
@@ -77,5 +77,17 @@
     <script src="glyph-hack-canvas/js/jquery-class/jquery.class.min.js"></script>
     <script src="glyph-hack-canvas/js/glyph-hack-canvas.js"></script>
     <script src="js/ingress-mission-icon.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-58203134-1', 'auto');
+      ga('require', 'displayfeatures');
+      ga('require', 'linkid', 'linkid.js');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
