* add unofficial note

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <title>Ingress Mission Icon Generator</title>
+    <title>Ingress Mission Icon Generator (Unofficial)</title>
     <meta name="description" content="[非公式]Ingressミッションのメダルを誰でもかんたんに作成 / (Unofficial)Easily create a Ingress Mission Medal anyone">
     <meta name="author" content="Noriaki Uchiyama (Agent: @TriStation)">
     <meta name="viewport" content="width=device-width">
@@ -15,7 +15,7 @@
         <![endif]-->
     <!--<link rel="shortcut icon" href="">-->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Ingress Mission Icon Generator"/>
+    <meta property="og:title" content="Ingress Mission Icon Generator (Unofficial)"/>
     <meta property="og:description" content="[非公式]Ingressミッションのメダルを誰でもかんたんに作成 / (Unofficial)Easily create a Ingress Mission Medal anyone" />
     <meta property="og:image" content="http://mission-icon-generator.ingress.tools/img/ingress-mission-icon-generator.png" />
     <meta property="og:url" content="http://mission-icon-generator.ingress.tools/" />
@@ -28,7 +28,9 @@
       <div class="jumbotron">
         <header>
           <h1>Ingress Mission Icon Generator</h1>
-          <p>Glyph hack, Save as icon image.<br>Enjoy glyph-hacking and Ingress!!</p>
+          <p>Glyph hack, Save as icon image.
+            <span class="note">/* This tool is an unofficial tool */</span><br>
+            Enjoy glyph-hacking and Ingress!!</p>
         </header>
       </div>
       <div class="well">
