--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <meta content="@noriaki" name="twitter:site" />
   </head>
   <body>
-    <div class="container" rome="main">
+    <div itemscope itemtype="http://schema.org/SoftwareApplication" class="container" rome="main">
       <div class="jumbotron">
         <header>
-          <h1>Ingress Mission Icon Generator</h1>
+          <h1 itemprop="name">Ingress Mission Icon Generator</h1>
           <p>Glyph hack, Save as icon image.
             <span class="note">/* This tool is an unofficial tool */</span><br>
             Enjoy glyph-hacking and Ingress!!</p>
@@ -67,8 +67,8 @@
       <footer>
         <p class="text-center">
           Copylight 2015
+          (Agent: <a href="https://plus.google.com/113883896593687296420" rel="publisher">@TriStation</a>)
           <a href="https://www.facebook.com/noriaki.uchiyama">Noriaki Uchiyama</a>
-          (Agent: <a href="https://plus.google.com/113883896593687296420">@TriStation</a>)
         </p>
       </footer>
     </div>
